# desafio_tecnico

./: .env.example  .gitignore  README.md  config.py  db.sqlite3  dependencies.py  main.py  pyproject.toml  requirements.txt
controllers/: AlternativaController.py  FormularioController.py  QuestaoController.py  RespostaController.py  UsuarioController.py
models/: AlternativaModel.py  FormularioModel.py  QuestaoModel.py  RespostaModel.py  UsuarioModel.py  __init__.py
repositories/: AlternativaRepository.py  FormularioRepository.py  QuestaoRepository.py  RespostaRepository.py  UsuarioRepository.py  __init__.py
schemas/: Alternativa.py  Formulario.py  Questao.py  Resposta.py  Usuario.py  __init__.py
uploads/: .gitkeep
